<resources>
    <string name="app_name">流浪窝</string>

    <string name="tab_title_first">小可爱</string>
    <string name="tab_title_second">救助站</string>
    <string name="tab_title_third">交流中心</string>

    <string name="identified_description">此机构已经过认证如有意愿捐赠请直接联系该机构</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="update_pwd_new_pwd">新密码</string>
    <string name="update_pwd_pre_pwd">旧密码</string>
    <string name="update_pwd_re_pwd">重复密码</string>
    <string name="update_pwd_confirm">确认修改</string>

    <string name="signin_username">用户名</string>
    <string name="signin_password">密码</string>
    <string name="signin_confirm">登陆</string>
    <string name="signin_to_register">没有账号？注册一个</string>

    <string name="register_username">用户名</string>
    <string name="register_email">邮箱</string>
    <string name="register_password">密码</string>
    <string name="register_confirm">注册</string>
    <string name="register_to_signin">已有账号？开始探索</string>

    <string name="modify_email">邮箱</string>
    <string name="modify_phone">电话</string>
    <string name="modify_male">男生</string>
    <string name="modify_female">女生</string>
    <string name="modify_description">描述</string>

    <string name="nav_account">个人信息</string>
    <string name="nav_focus">我的关注</string>
    <string name="nav_setting">设置</string>

    <string name="dialog_warning">注意：</string>
    <string name="dialog_signout">您确定注销并回到登陆界面吗?</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>

    <string name="preference_version">0.7</string>
    <string name="preference_contact">17662135586</string>
    <string name="preference_developer">https://github.com/MoriartyL</string>
    <string name="preference_email">moriartybeats@gmail.com</string>

    <string name="report_species">种类</string>
    <string name="report_location">地点</string>
    <string name="report_description">描述</string>
    <string name="report_time">时间</string>
    <string name="report_confirm">提交</string>
    <string name="report_loading">正在上传</string>
    <string name="report_invalid">请确保信息完整</string>
    <string name="report_success">感谢您的汇报我们会及时处理</string>
</resources>
