<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vagrant.android.vagrant.activity.UpdatePwdActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <EditText
                android:id="@+id/update_pwd_prepwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/update_pwd_pre_pwd"
                android:inputType="textPassword"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <EditText
                android:id="@+id/update_pwd_newpwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/update_pwd_new_pwd"
                android:inputType="textPassword"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <EditText
                android:id="@+id/update_pwd_repwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/update_pwd_re_pwd"
                android:inputType="textPassword"
                android:textColor="#000000" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_update_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorPrimaryDark"
            android:padding="12dp"
            android:text="@string/update_pwd_confirm"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
